kubernetes/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: transmission
spec:
  hostnames:
    - transmission.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: transmission
          namespace: transmission
          port: 9091
          group: ""
          weight: 1
